--- a/llm-eval-website/assets/css/style.css
+++ b/llm-eval-website/assets/css/style.css
@@ -129,55 +129,80 @@ body {
   font-weight: bold;
 }
 
+.table-container {
+    width: 100%;
+    max-height: 632px;
+    overflow-y: auto;
+    padding: 24px 24px 40px 24px;  /* top right bottom left */
+  }
+
 table {
     width: 100%;
     border-collapse: collapse;
-    display: flex;
-    height: 632px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    flex-shrink: 0;
-    align-self: stretch;
 }
 
 thead {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  align-self: stretch;
-}
-
-th,
-td {
-    /* border: 1px solid #ddd; */
-    padding: 8px;
-}
-
-th {
-    text-align: left;
     position: sticky;
     top: 0;
     z-index: 1;
+}
+
+th, td {
+    border: 1px solid #E8E8E8;
+    padding: 12px;
+    text-align: left;
+    max-width: 180px;
+}
+
+th {
     height: 56px;
-    padding: 16px;
-    justify-content: center;
-    gap: 8px;
-
-    background: white;
-
-    /* borders */
-    /* border-right: 1px solid #BEBEBE;
-    border-bottom: 1px solid black; */
-
-    /* typography */
+    /* padding: 12px; */
     overflow: hidden;
-    color: black;
-    font-feature-settings: 'liga' off, 'clig' off;
+    color: black; */
     text-overflow: ellipsis;
-    font-family: "Amsterdam Sans";
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 150%; /* 24px */
+    /* border: none;
+    z-index: 2;
+    position: relative;
+    box-shadow: 4px 0 0 0 #E8E8E8, 0 4px 0 0 #E8E8E8; */
+}
+
+/* tr:nth-child(even) {
+    background-color: #f9f9f9;
+} */
+
+/* tr:hover {
+    background-color: #f1f1f1;
+} */
+
+
+.score-cell {
+  width: 150px;
+  padding: 5;
+  /* text-align: left; */
+  box-sizing: border-box;
+}
+
+.score-circles {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.score-circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: inline-block;
+  opacity: 0.05; /* 5% visible for inactive */
+  transition: opacity 0.3s, background 0.3s;
+}
+
+.score-circle[class~="5"] { background: #00A03C; }
+.score-circle[class~="4"] { background: #BED200; }
+.score-circle[class~="3"] { background: #FFE600; }
+.score-circle[class~="2"] { background: #FF9100; }
+.score-circle[class~="1"] { background: #EC0000; }
+
+.score-circle.active {
+  opacity: 1;
 }
