update new columns to be treated as scores

--- a/llm-eval-website/_includes/llm_overview.html
+++ b/llm-eval-website/_includes/llm_overview.html
@@ -1,5 +1,5 @@
 {% assign translations_key = 'translations_' | append: page.lang %}
-{% assign score_columns = "reasoning,inclusion,factuality,energy_use" | split: "," %}
+{% assign score_columns = "reasoning,inclusion,simplifcation,summarization,factuality,energy_use" | split: "," %}
 
 <div class="table-container">
     <table>
